knative_serving_services/multitenancy/policies/rl-production/0-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rl-production
  labels:
    admin.knative.dev/tenant-name: rl
  annotations:
    kourier.knative.dev/listener-port: "8083"
