knative_serving_services/multitenancy/policies/rl-production/allow-all-from-to-tenant-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-from-to-tenant-ns
  namespace: rl-production
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            admin.kourier.dev/tenant-name: rl
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            admin.kourier.dev/tenant-name: rl
  policyTypes:
    - Egress
    - Ingress
