knative_serving_services/multitenancy/policies/rl-production/allow-all-in-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-in-ns
  namespace: rl-production
spec:
  podSelector: { }
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: rl-production
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: rl-production
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
  policyTypes:
    - Ingress
    - Egress
