knative_serving_services/multitenancy/policies/rl-production/allow-tenant-ingress-from-tenant.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-tenant-ingress-from-tenant
  namespace: rl-production
spec:
  podSelector: {}
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kourier-system
      ports:
        - protocol: TCP
          port: 8083
  policyTypes:
    - Egress
