knative_serving_services/multitenancy/policies/rl-production/deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
  namespace: rl-production
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
